[gd_scene load_steps=19 format=2]

[ext_resource path="res://Recursos/Players/bunny1_stand.png" type="Texture" id=1]
[ext_resource path="res://Juego/Personaje/PersonajePrincipal.gd" type="Script" id=2]
[ext_resource path="res://Recursos/Players/bunny1_jump.png" type="Texture" id=3]
[ext_resource path="res://Recursos/Players/bunny1_walk1.png" type="Texture" id=4]
[ext_resource path="res://Recursos/Players/bunny1_walk2.png" type="Texture" id=5]
[ext_resource path="res://Recursos/Sfx/Jump 19.wav" type="AudioStream" id=6]
[ext_resource path="res://Recursos/Items/wing_right.png" type="Texture" id=7]
[ext_resource path="res://Recursos/Items/wing_left.png" type="Texture" id=8]
[ext_resource path="res://Recursos/Sfx/Disparo.wav" type="AudioStream" id=9]
[ext_resource path="res://Juego/Objetos/Bala.tscn" type="PackedScene" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "saltar",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "correr",
"speed": 9.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 40.0406
height = 67.6745

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 41.39, 10 )

[sub_resource type="Animation" id=4]
resource_name = "aclarar"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "entrar_portal"
tracks/0/type = "value"
tracks/0/path = NodePath("Animacion:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animacion:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("wing_left:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("wing_right:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "oscurecer"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("wing_left:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 0.0, -40.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("wing_right:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, 0.0, 40.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("wing_right:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("wing_left:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="PersonajePrincipal" type="KinematicBody2D" groups=[
"jugador",
]]
scale = Vector2( 0.5, 0.5 )
z_index = 50
z_as_relative = false
collision_layer = 2147483682
collision_mask = 28
script = ExtResource( 2 )
velocidad = Vector2( 300, 500 )
acel_caida = 280
fuerza_salto = 2500
bala = ExtResource( 10 )

[node name="wing_left" type="Sprite" parent="."]
visible = false
position = Vector2( -28.3828, -97.5117 )
scale = Vector2( 1.555, 1.506 )
texture = ExtResource( 8 )
offset = Vector2( -37.0655, -15.5872 )

[node name="wing_right" type="Sprite" parent="."]
visible = false
position = Vector2( 28.3136, -97.5117 )
scale = Vector2( 1.55532, 1.50625 )
texture = ExtResource( 7 )
offset = Vector2( 36.7926, -15.483 )

[node name="Animacion" type="AnimatedSprite" parent="."]
position = Vector2( 3.05176e-05, -104.389 )
frames = SubResource( 1 )
animation = "idle"

[node name="ColisionCuerpo" type="CollisionShape2D" parent="."]
position = Vector2( 0.445423, -76.1222 )
shape = SubResource( 2 )

[node name="AudioSaltar" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.194
bus = "SFX"

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.8, 1.8 )
limit_bottom = 1000
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.1
drag_margin_right = 0.1

[node name="ColisionPies" type="CollisionShape2D" parent="."]
position = Vector2( 2.56359, -10.9635 )
shape = SubResource( 3 )

[node name="EnfriamientoPowerUpSalto" type="Timer" parent="."]
wait_time = 1.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/aclarar = SubResource( 4 )
anims/entrar_portal = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/oscurecer = SubResource( 7 )
anims/volar = SubResource( 8 )

[node name="EnfriamientoPowerUpVolar" type="Timer" parent="."]
wait_time = 2.0

[node name="Tween" type="Tween" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
modulate = Color( 1, 1, 1, 0.6 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Disparo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -13.333
bus = "SFX"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Disparos" type="Position2D" parent="."]

[node name="PosicionDisparo" type="Position2D" parent="Disparos"]
position = Vector2( 54.7035, -95.1366 )
[connection signal="timeout" from="EnfriamientoPowerUpSalto" to="." method="_on_EnfriamientoPowerUp_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="EnfriamientoPowerUpVolar" to="." method="_on_EnfriamientoPowerUpVolar_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
